# Carl-s-Tee-bot

./: .gitignore  Procfile  README.md  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
docs/: EMERGENCY.md  first_run.md  setup.md
docs/plans/: 2026-05-15-teebot-implementation.md
docs/specs/: 2026-05-15-foretees-bot-design.md
scripts/: book_now.py  init_db.py  kill_switch.sh  run_booker.py  run_daemon.py  run_poller.py
src/teebot/: __init__.py  audit.py  booker_orchestrator.py  config.py  db.py  inbox.py  mailer.py  parser.py  poller_orchestrator.py
src/teebot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/teebot/foretees/: __init__.py  auth.py  booker.py  session.py  slot_form.py  tee_sheet.py
systemd/: teebot-booker.service  teebot-booker.timer  teebot-poller.service  teebot-poller.timer
tests/: conftest.py  test_audit.py  test_booker_orchestrator.py  test_config.py  test_db.py  test_foretees_auth.py  test_foretees_booker.py  test_foretees_session.py  test_foretees_slot_form.py  test_foretees_tee_sheet.py  test_inbox.py  test_mailer.py  test_parser.py  test_poller_orchestrator.py  test_smoke.py
tests/fixtures/: slot_form_sample.html  tee_sheet_sample.html
tests/fixtures/emails/: malformed.eml  valid_freeform.eml  valid_structured.eml
